# mcmi

./: LICENSE  Undertrain_totalData.py  directCNN.py  directCNNSim.py  directFeedTest.py  interpret_data.py  loadDirectCNNData.py  load_data.py  load_train_data.py  mil.py  mil_2Class1stStep  mil_2Class1stStep.py  mil_underTrain.py  net1.py  net1_MIL.py  select_data.py  setup.cfg  setup.py  sim.py  underTrainFix.py  underTrainSim.py  unsup.py  viz_results.py
src/: directCNNSim.py  direct_cnn_dataset.py  loadSimData.py  load_subtissues.py  load_train_data.py  mcmi_step0.py  mcmi_step1.py  mcmi_step2.py  underTrainFix.py  underTrainSim.py
