[metadata]
name = mcmi
version = 0.2.0
description = Package for Multiple Class Multiple Instance segmentation of tissues imaged with Mass Spectrometry
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir = 
    = src

[options.packages.find]
where =src